[gd_scene load_steps=18 format=3 uid="uid://cx61c7sq3ukxq"]

[ext_resource type="StyleBox" uid="uid://buu3vm8g07k1k" path="res://assets/simonsays/paneltexture.tres" id="1_ujcua"]
[ext_resource type="Script" path="res://scripts/simonsays/simonsays.gd" id="2_xbfyr"]
[ext_resource type="Texture2D" uid="uid://yoe6qcvhbj2b" path="res://assets/simonsays/buttontextures/greenbutton/greenbutton.png" id="3_bm30d"]
[ext_resource type="Texture2D" uid="uid://dqyujn2kbojhx" path="res://assets/simonsays/buttontextures/greenbutton/greenbutton_pressed.png" id="4_yak5g"]
[ext_resource type="Texture2D" uid="uid://2cm72rhq08kc" path="res://assets/simonsays/buttontextures/greenbutton/greenbutton_hovered.png" id="5_nvhqu"]
[ext_resource type="Texture2D" uid="uid://b2rpjd2wgglw6" path="res://assets/simonsays/buttontextures/bluebutton/bluebutton.png" id="6_urgx4"]
[ext_resource type="Texture2D" uid="uid://fukmemy5ku1u" path="res://assets/simonsays/buttontextures/bluebutton/bluebutton_pressed.png" id="7_hxp4t"]
[ext_resource type="Texture2D" uid="uid://badwxcsgdqyeq" path="res://assets/simonsays/buttontextures/bluebutton/bluebutton_hovered.png" id="8_1pcof"]
[ext_resource type="Texture2D" uid="uid://bm2kihfpn7ham" path="res://assets/simonsays/buttontextures/redbutton/redbutton.png" id="9_4ieab"]
[ext_resource type="Texture2D" uid="uid://dgc1lwtdvuknn" path="res://assets/simonsays/buttontextures/redbutton/redbutton_pressed.png" id="10_uaey7"]
[ext_resource type="Texture2D" uid="uid://chcpf4adp3a7f" path="res://assets/simonsays/buttontextures/redbutton/redbutton_hovered.png" id="11_eur2i"]
[ext_resource type="Texture2D" uid="uid://dh2fndlgihodh" path="res://assets/simonsays/buttontextures/yellowbutton/yellowbutton.png" id="12_mbwj3"]
[ext_resource type="Texture2D" uid="uid://dvkljoeaby0g5" path="res://assets/simonsays/buttontextures/yellowbutton/yellowbutton_pressed.png" id="13_iaaek"]
[ext_resource type="Texture2D" uid="uid://bywt1iluk5iok" path="res://assets/simonsays/buttontextures/yellowbutton/yellowbutton_hovered.png" id="14_uusxg"]

[sub_resource type="CompressedTexture2D" id="CompressedTexture2D_g5p08"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_xsqx2"]
texture = SubResource("CompressedTexture2D_g5p08")

[sub_resource type="Theme" id="Theme_lbnxl"]
/styles/Panel = SubResource("StyleBoxTexture_xsqx2")
Panel/styles/panel = ExtResource("1_ujcua")

[node name="Control" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Panel" type="Panel" parent="."]
layout_mode = 0
offset_right = 1154.0
offset_bottom = 646.0
theme = SubResource("Theme_lbnxl")
script = ExtResource("2_xbfyr")

[node name="BoxContainer" type="BoxContainer" parent="Panel"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -404.0
offset_top = -100.0
offset_right = 404.0
offset_bottom = 100.0
grow_horizontal = 2
grow_vertical = 2

[node name="GreenButton" type="TextureButton" parent="Panel/BoxContainer"]
custom_minimum_size = Vector2(50, 50)
layout_mode = 2
texture_normal = ExtResource("3_bm30d")
texture_pressed = ExtResource("4_yak5g")
texture_hover = ExtResource("5_nvhqu")
texture_disabled = ExtResource("3_bm30d")

[node name="BlueButton" type="TextureButton" parent="Panel/BoxContainer"]
custom_minimum_size = Vector2(50, 50)
layout_mode = 2
texture_normal = ExtResource("6_urgx4")
texture_pressed = ExtResource("7_hxp4t")
texture_hover = ExtResource("8_1pcof")
texture_disabled = ExtResource("6_urgx4")

[node name="RedButton" type="TextureButton" parent="Panel/BoxContainer"]
custom_minimum_size = Vector2(50, 50)
layout_mode = 2
texture_normal = ExtResource("9_4ieab")
texture_pressed = ExtResource("10_uaey7")
texture_hover = ExtResource("11_eur2i")
texture_disabled = ExtResource("9_4ieab")

[node name="YellowButton" type="TextureButton" parent="Panel/BoxContainer"]
custom_minimum_size = Vector2(50, 50)
layout_mode = 2
texture_normal = ExtResource("12_mbwj3")
texture_pressed = ExtResource("13_iaaek")
texture_hover = ExtResource("14_uusxg")
texture_disabled = ExtResource("12_mbwj3")

[connection signal="pressed" from="Panel/BoxContainer/GreenButton" to="Panel" method="_on_green_button_pressed"]
[connection signal="pressed" from="Panel/BoxContainer/BlueButton" to="Panel" method="_on_blue_button_pressed"]
[connection signal="pressed" from="Panel/BoxContainer/RedButton" to="Panel" method="_on_red_button_pressed"]
[connection signal="pressed" from="Panel/BoxContainer/YellowButton" to="Panel" method="_on_yellow_button_pressed"]
